<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/pastel_yellow"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_goback"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:tint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="342dp"
        android:layout_height="583dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstnamelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/m_white"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/m_red">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:hint="Name"
                android:inputType="text|textPostalAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastnamelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/m_white"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/m_red">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:hint="Last Name"
                android:inputType="text|textPostalAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/milayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/m_white"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/m_red">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_mi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:hint="Middle Initial"
                android:inputType="text|textPostalAddress"
                android:maxLength="1"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/m_white"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/m_red">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_regemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:hint="Email"
                android:inputType="text|textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/m_white"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/m_red">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:hint="Address"
                android:inputType="text|textPostalAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/regpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/m_white"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/m_red">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_regpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:hint="Password"
                android:inputType="text|textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/m_white"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/m_red">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_confirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:hint="Confirm Password"
                android:inputType="text|textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pastel_yellow"
            android:text="Register"
            android:textColor="@android:color/black" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="198dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/m_white"
        android:gravity="center"
        android:text="REGISTER"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


</android.support.constraint.ConstraintLayout>